cmake_minimum_required(VERSION 3.18)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/run/${CMAKE_BUILD_TYPE}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/run/${CMAKE_BUILD_TYPE}")
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/run/${CMAKE_BUILD_TYPE}/pdb")
set(CMAKE_PDB_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/run/${CMAKE_BUILD_TYPE}/pdb_link")

set(CMAKE_SHARED_LIBRARY_PREFIX "")

set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_Debug OFF)

project(bryc)

add_subdirectory(bryc-c)

add_executable(bryc bryc.c)